add sources to jar file in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    from sourceSets["main"].allSource
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12+'
 }
