--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,5 @@ jar {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12+'
+    testImplementation group: 'junit', name: 'junit', version: '4.12+'
 }
